# veyra

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  RELEASE.md  SECURITY.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: PULL_REQUEST_TEMPLATE.md  WORKFLOWS.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml  test-release.yml
compiler/: Cargo.toml
compiler/src/: ast.rs  debug_lexer.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
docs/: DESIGN_PHILOSOPHY.md
examples/: README.md  advanced_calculator.vey  advanced_data_structures.vey  advanced_features.vey  arithmetic.vey  arrays.vey  async_concurrency.vey  concurrency.vey  data_analysis.vey  functions.vey  hello_world.vey  loops.vey  math_demo.vey  oop_features.vey  ownership.vey  pattern_matching_exceptions.vey  performance_optimization.vey  simple_analysis.vey  stdlib_simple.vey  text_processing.vey  variables.vey
runtime/: Cargo.toml
runtime/src/: actor_system.rs  async_runtime.rs  garbage_collector.rs  jit_compiler.rs  lib.rs  memory_manager.rs  thread_pool.rs
scripts/: build-release.ps1  build-release.sh
search.desc/veyc/: veyc-desc-0-.js
search.desc/veyra_compiler/: veyra_compiler-desc-0-.js
search.desc/veyra_dbg/: veyra_dbg-desc-0-.js
search.desc/veyra_fmt/: veyra_fmt-desc-0-.js
search.desc/veyra_lint/: veyra_lint-desc-0-.js
search.desc/veyra_lsp/: veyra_lsp-desc-0-.js
search.desc/veyra_pkg/: veyra_pkg-desc-0-.js
search.desc/veyra_repl/: veyra_repl-desc-0-.js
search.desc/veyra_runtime/: veyra_runtime-desc-0-.js
search.index/: 000efee08ffe.js  01e12283c3ce.js  0263b27ef1f5.js  0333b94acf2f.js  0481009bef3d.js  04ca19673288.js  05e417cb8623.js  06e8440e0c3b.js  07aa72518501.js  08100cc9437e.js  083802a90144.js  08833985655a.js  0a3315dac40d.js  0c9519d9f142.js  0d0f213d8ce3.js  0d45fee2c260.js  0d6fa59a36ac.js  0dc7c09331fc.js  0e283430f5f9.js  0e4b957e133b.js  10899fda0888.js  10b86414d31a.js  11240c9baed2.js  11815d1c338a.js  12007e6bb1b4.js  12fd6b635d1d.js  1346dd3b4246.js  1373cddfd265.js  13b4b4611af9.js  1523201f825c.js  157e7295d7d7.js  158a772a43ae.js  158c5037bdec.js  163f94bd0090.js  16ea353875fb.js  1721a46292e2.js  17c6dad678f7.js  17f948cb8182.js  182715468395.js  18277d99178a.js  (+165 more)
search.index/crateNames/: 545e564d2be1.js  b293d6ad20d2.js  c527fe0f3135.js
search.index/desc/: 34ea131d389b.js  569a411687eb.js  88615cf9e91b.js
search.index/entry/: 6a7136740699.js  9a9bbb1421ed.js  ef23f65d40ba.js
search.index/function/: 8a9ce23e5327.js  ba41a4ba41a6.js  d31653e564da.js
search.index/generic_inverted_index/: 0e7f2bc45b05.js  41fc31720ed6.js  9a674a5f7908.js
search.index/name/: 053deedcebad.js  4c89277e4c9e.js  4dc25f970d56.js
search.index/normalizedName/: 1237206b2284.js  160ceb05687e.js  2d63041deafd.js
search.index/path/: 4cbb54053bdc.js  6a8402d46675.js  919434b70407.js
search.index/type/: 8c368dc31128.js  9382fdc9fb8a.js  d1d5cc7d894d.js
spec/: COMPLETE_LANGUAGE_SPEC.md  GRAMMAR.ebnf  LANGUAGE_SPEC.md
src/veyc/: ast.rs.html  error.rs.html  interpreter.rs.html  lexer.rs.html  main.rs.html  parser.rs.html
src/veyra_compiler/: ast.rs.html  error.rs.html  interpreter.rs.html  lexer.rs.html  lib.rs.html  parser.rs.html
src/veyra_dbg/: main.rs.html
src/veyra_fmt/: main.rs.html
stdlib/: collections.vey  core.vey  datetime.vey  io.vey  math.vey  net.vey  string.vey
tests/: comprehensive_test_suite.vey
tools/: Cargo.toml  README.md
tools/.cargo/: config.toml
tools/debugger/: Cargo.toml
tools/debugger/src/: main.rs
tools/formatter/: Cargo.toml
tools/formatter/src/: main.rs
tools/linter/: Cargo.toml
tools/linter/src/: main.rs
tools/lsp/: Cargo.toml
tools/lsp/src/: main.rs
tools/package_manager/: Cargo.toml
tools/package_manager/src/: main.rs
tools/repl/: Cargo.toml  README.md
tools/repl/src/: ansi.rs  commands.rs  config.rs  helper.rs  main.rs  state.rs  ui.rs
tools/vscode_extension/: .vscodeignore  LICENSE  README.md  USER_GUIDE.md  language-configuration.json  package.json  tsconfig.json
tools/vscode_extension/snippets/: veyra.json
tools/vscode_extension/src/: extension.ts  toolManager.ts
tools/vscode_extension/syntaxes/: veyra.tmGrammar.json
veyc/: all.html  enum.Commands.html  fn.check_file.html  fn.compile_file.html  fn.lex_file.html  fn.main.html  fn.parse_file.html  fn.run_file.html  index.html  sidebar-items.js  struct.Cli.html
veyc/ast/: enum.Item.html  (+48 more)
veyra_compiler/: all.html  index.html  sidebar-items.js
veyra_dbg/: all.html  enum.DebugCommand.html  enum.StepMode.html  fn.main.html  index.html  sidebar-items.js  struct.Breakpoint.html  struct.Cli.html  struct.Debugger.html  struct.DebuggerState.html
veyra_fmt/: all.html  fn.collect_veyra_files.html  fn.format_file.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html  struct.Formatter.html  struct.FormatterConfig.html
veyra_lint/: all.html  enum.LintLevel.html  fn.collect_veyra_files.html  fn.load_config.html  fn.main.html  fn.print_issues_json.html  fn.print_issues_text.html  index.html  sidebar-items.js  struct.BlockAnalyzer.html  struct.Cli.html  struct.FunctionAnalyzer.html  struct.LintConfig.html  struct.LintIssue.html  struct.LintRule.html  struct.Linter.html  struct.ReachabilityAnalyzer.html  struct.ReturnAnalyzer.html  struct.ShadowAnalyzer.html  struct.VariableAnalyzer.html
veyra_lsp/: all.html  fn.main.html  index.html  sidebar-items.js  struct.DocumentInfo.html  struct.VeyraLanguageServer.html
veyra_pkg/: all.html  enum.Commands.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html  struct.PackageManager.html  struct.Registry.html  struct.VeyraProject.html  struct._PackageInfo.html
veyra_repl/: all.html  fn.extract_symbols_for_completion.html  fn.main.html  fn.needs_more_lines.html  fn.show_startup_tip.html  index.html  sidebar-items.js  struct.Cli.html
veyra_runtime/: all.html  index.html  sidebar-items.js  struct.VeyraRuntime.html
(+248 files in other folders)
