[package]
name = "veyra-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Veyra Team"]
description = "Advanced runtime system for the Veyra programming language"
license = "MIT OR Apache-2.0"

[lib]
name = "veyra_runtime"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
dashmap = "6.1"
parking_lot = "0.12"
crossbeam = "0.8"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
num_cpus = "1.0"

[dependencies.veyra-compiler]
path = "../compiler"