[package]
name = "veyra-dbg"
version = "0.1.0"
edition = "2021"
authors = ["Veyra Team"]
description = "Debugger for the Veyra programming language"
license = "MIT OR Apache-2.0"

[[bin]]
name = "veyra-dbg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.veyra-compiler]
path = "../../compiler"