[package]
name = "veyra-fmt"
version = "0.1.0"
edition = "2021"
authors = ["Veyra Team"]
description = "Code formatter for the Veyra programming language"
license = "MIT OR Apache-2.0"

[[bin]]
name = "veyra-fmt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.0"

[dependencies.veyra-compiler]
path = "../../compiler"