[package]
name = "veyra-lint"
version = "0.1.0"
edition = "2021"
authors = ["Veyra Team"]
description = "Linter and static analysis for the Veyra programming language"
license = "MIT OR Apache-2.0"

[[bin]]
name = "veyra-lint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.0"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.veyra-compiler]
path = "../../compiler"