[package]
name = "veyra-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Veyra Team"]
description = "Language Server Protocol implementation for the Veyra programming language"
license = "MIT OR Apache-2.0"

[[bin]]
name = "veyra-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dashmap = "6.1"
ropey = "1.6"
regex = "1.0"

[dependencies.veyra-compiler]
path = "../../compiler"