[package]
name = "veyra-pkg"
version = "0.1.0"
edition = "2021"
authors = ["Veyra Team"]
description = "Package manager for the Veyra programming language"
license = "MIT OR Apache-2.0"

[[bin]]
name = "veyra-pkg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
dirs = "5.0"
walkdir = "2.0"
semver = "1.0"
colored = "3.1"

[dependencies.veyra-compiler]
path = "../../compiler"