[package]
name = "veyra-repl"
version = "0.1.0"
edition = "2021"
authors = ["Veyra Team"]
description = "Interactive REPL for the Veyra programming language"
license = "MIT OR Apache-2.0"

[[bin]]
name = "veyra-repl"
path = "src/main.rs"

[dependencies]
rustyline = "14.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
colored = "3.0"
dirs = "5.0"

[dependencies.veyra-compiler]
path = "../../compiler"